# HH6dim

./: HEFT6dim2.fr  ggHH.rc  ggHH_EWChL.rc  ggHH_HTL.rc  ggHH_LO.rc  ggHH_UFO.rc  ggHH_UFO2.rc  ggHH_test.rc  ggHH_test_noMatch.rc  ggHH_virt.rc  gosam.crashed
HEFT6dim_UFO/: CT_couplings.py  coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py  vertices.py
ModelFiles/EWChL/EWChL_UFO/: CT_couplings.py  coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py  vertices.py
ModelFiles/EWChL_GmuScheme/EWChL_UFO/: CT_couplings.py  (+3 more)
ModelFiles/EWChL_GmuScheme_gs/: EWChL.fr
ModelFiles/EWChL_GmuScheme_gs_tree/: EWChL.fr
ModelFiles/EWChL_Matteo/: EWChL.nb
ModelFiles/HEFT6dim/: HEFT6dim.fr
ModelFiles/HEFT6dim_ew2/: HEFT6dim.fr
ModelFiles/HEFT6dim_ew2_QED/: HEFT6dim.fr
UFOfiles/: HEFT6dim.fr  HEFT6dim2.nb  SM_HEFT.fr
lambda-scan-plots/: lambda-scan-plot.nb  lambda-scan.csv  lambda-scan_EWChL.csv
mathematica/: HEFT6dim.nb  HEFT6dim2.nb  HH6dim.nb
models/EWChL_GmuScheme/: SM_EWChL.fr
models/EWChL_GmuScheme_gs/: EWChL.fr  SM_EWChL.fr
models/EWChL_UFO/: coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py
models/HEFT6dim_UFO/: CT_couplings.py  coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py  vertices.py
models/HEFT6dim_noMatch_UFO/: CT_couplings.py  coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py  vertices.py
originalFiles/: ggHH_EWChL.rc
virtual/: .golem.dir  Makefile  Makefile.am  Makefile.conf  Makefile.in  config.sh  config.sh.in  config.status  configure  configure.ac  diagrams-0.hh  diagrams-1.hh  libtool
virtual/autom4te.cache/: output.1  requests  traces.1
virtual/codegen/: buildcolor.py  buildfortran.py  buildfortran_d.py  buildfortran_tmu.py  buildfortran_tn2.py  buildfortran_tn3.py  buildfortranborn.py  buildmodel.py  diagsum.frm  func.hh  func.txt  info.frm  lightconedecomp.prc  optimizeborn.hh  pythonin.py  r2.hh  shiftmomenta.prc  symbols.hh
virtual/common/: Makefile  Makefile.am  Makefile.dep  Makefile.in  accu.f90  config.f90  dipoles.f90  gghh_smehc_accu.mod  gghh_smehc_config.mod  globalsl1.f90  groups.f90  kinematics.f90  model.f90  model.txt  rambo.f90  scalar_cache.f90  util.f90
virtual/doc/: Makefile  process.aux  process.dvi  process.idx  process.ilg  process.ind  process.out  process.ps  process.tex  process.toc
virtual/helicity0/: Makefile  Makefile.am  Makefile.dep  Makefile.in  Makefile.source  amplitudeh0.f90  globals.f90  ninjah0.f90
virtual/matrix/: Makefile  Makefile.am  Makefile.dep  Makefile.in  matrix.f90  test.f90
virtualEWChl/: .golem.dir  Makefile  Makefile.am  config.status  diagrams-0.hh  diagrams-1.hh  libgolem_process_gghh.la  libtool  model.hh
virtualEWChl/.libs/: libgolem_process_gghh.la  libgolem_process_gghh.lai  libgolem_process_gghh.so.0  libgolem_process_gghh.so.0.0.0
virtualEWChl/autom4te.cache/: output.0  requests  traces.0  traces.1
virtualEWChl/codegen/: buildcolor.py  buildfortran_tmu.py  buildfortran_tn2.py  buildmodel.py  info.frm  symbols.hh
virtualEWChl/common/: Makefile  Makefile.dep  accu.lo  color.f90  color.lo  color.tmp  config.f90  dipoles.f90  dipoles.lo  gghh_color.mod  gghh_dipoles.mod  gghh_globalsl1.mod  gghh_groups.mod  gghh_kinematics.mod  gghh_model.mod  gghh_rambo.mod  gghh_scalar_cache.mod  gghh_util.mod  gghh_version.mod  globalsl1.f90  globalsl1.lo  groups.lo  kinematics.lo  libgolem_process_gghh_common.la  model.f90  rambo.lo  scalar_cache.lo  util.f90  version.f90
virtualEWChl/common/.libs/: libgolem_process_gghh_common.la
virtualEWChl/doc/: Makefile  Makefile.in  process.aux  process.dvi  process.ilg  process.ind  process.ps  process.tex  process.toc
virtualEWChl/helicity0/: Makefile  Makefile.am  Makefile.dep  Makefile.in  Makefile.source  abbrevd11h0.f90  abbrevd11h0.lo  abbrevd13h0.f90  abbrevd13h0.lo  abbrevd2h0.f90  abbrevd2h0.lo  abbrevd7h0.f90  abbrevd7h0.lo  abbrevd9h0.f90  abbrevd9h0.lo  amplitudeh0.f90  amplitudeh0.lo  born.txt  borndiag.prc  d11h0l1.f90  d11h0l1.lo  d11h0l1.txt  d11h0l121.f90  d11h0l121.lo  d11h0l131.f90  d11h0l131.lo  d11h0l132.f90  d11h0l132.lo  d11h0l1d.f90  d11h0l1d.lo  d11h0l1d.txt  d13h0l1.f90  d13h0l1.lo  d13h0l1.txt  d13h0l121.f90  d13h0l121.lo  d13h0l131.f90  d13h0l131.lo  d13h0l132.f90  d13h0l132.lo  (+79 more)
virtualEWChl/helicity0/.libs/: libgolem_process_gghh_helicity0.la
virtualEWChl/matrix/: Makefile  debug.xml  gghh_matrix.mod  libgolem_process_gghh_matrix.la  matrix.f90  test
virtualEWChl/matrix/.libs/: libgolem_process_gghh_matrix.la
virtualUFOtest/: .golem.dir  Makefile  Makefile.in  aclocal.m4  config.sh  config.sh.in  config.status  configure  configure.ac  diagrams-0.hh  diagrams-1.hh  model.hh
virtualUFOtest/autom4te.cache/: requests  traces.2
virtualUFOtest/codegen/: buildfortran_d.py  buildfortran_tn3.py  buildmodel.py  diagsum.frm  func.hh  func.txt  optimizeborn.hh  pythonin.py  r2.hh  shiftmomenta.prc
virtualUFOtest/common/: Makefile  Makefile.am  Makefile.dep  Makefile.in  accu.f90  gghh_accu.mod  gghh_config.mod  kinematics.f90  model.txt  rambo.f90
virtualUFOtest/doc/: Makefile  process.aux  process.dvi  process.idx  process.ilg  process.ind  process.out  process.ps  process.tex  process.toc
virtualUFOtest/helicity0/: Makefile  Makefile.am  Makefile.dep  Makefile.in  Makefile.source  amplitudeh0.f90  globals.f90  ninjah0.f90
virtualUFOtest/matrix/: Makefile  Makefile.am  Makefile.dep  Makefile.in  matrix.f90
virtualtest/: .golem.dir  config.sh  diagrams-0.hh  diagrams-1.hh  model.hh
virtualtest/codegen/: buildfortran.py  buildfortranborn.py  buildmodel.py  diagsum.frm  func.hh  func.txt  pythonin.py  r2.hh  shiftmomenta.prc  symbols.hh
virtualtest/common/: config.f90  groups.f90  kinematics.f90  scalar_cache.f90
virtualtest/doc/: process.aux  process.dvi  process.idx  process.ilg  process.ind  process.out  process.ps  process.tex  process.toc
virtualtest/helicity0/: Makefile  Makefile.dep  Makefile.source  amplitudeh0.f90  ninjah0.f90
virtualtest/matrix/: test.f90
(+55 files in other folders)
